sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i: Int = 0
  for (i <- 1 to getNombreValeurs()){
    if (!plusPetit(i, i+1)){
      echange(i,i+1)
      i = 0
    }
  }
}